Fix multiple cascade of already-committed transform requests